--- a/style/style.css
+++ b/style/style.css
@@ -3,6 +3,10 @@
 
 :root {
     --main-purple: rgb(159, 57, 199);
+    --main-blue: rgb(76, 168, 180);
+
+    /* Variável para mudança de temperatura do termômetro */
+        --termometer: #4CAF50;
 }
 
 html, body {
@@ -42,7 +46,7 @@ body {
     }
 
     .temp-container__item {
-        background-color: aqua;
+        background-color: var(--main-blue);
         
         border-radius: 2rem;
 
@@ -79,7 +83,7 @@ body {
 /* Termômetro */
 
     .termometer {
-        background-color: aqua;
+        background-color: var(--main-blue);
 
         border-radius: 2rem;
         
@@ -107,16 +111,23 @@ body {
     }
 
     .progress-bar {
-        background-color: #4CAF50;
+        background-color: var(--termometer);
+        /*  */
+        color: white;
+        
         border-radius: 1rem;
+
         height: 0%;
         width: 60%;
+        
+        text-align: center;
+
         position: absolute;
         bottom: 0;
-        text-align: center;
-        color: white;
 
         z-index: 1;
+
+        transition: height .5s ease, background-color .5s ease;
     }
 
     .progress-container::after {
@@ -126,7 +137,7 @@ body {
         height: 5rem;
         width: 5rem;
 
-        background-image: radial-gradient(#4caf50 50%, #ddd 50%);
+        background-image: radial-gradient(var(--termometer) 50%, #ddd 50%);
         border-radius: 50%;
 
         position: absolute;
@@ -187,7 +198,7 @@ body {
         padding: 1.6rem;
 
         border: none;
-        background-color: aqua;
+        background-color: var(--main-blue);
         font-size: 2.4rem;
         border-radius: 2rem;
     }
@@ -195,7 +206,7 @@ body {
     .actions-container input[type="number"] {
         padding: 1.6rem;
         border: none;
-        background-color: aqua;
+        background-color: var(--main-blue);
         font-size: 2.4rem;
         width: 15rem;
         box-sizing: border-box;
@@ -206,7 +217,7 @@ body {
     .actions-container input[type="submit"] {
         padding: 1.6rem;
         border: none;
-        background-color: aqua;
+        background-color: var(--main-blue);
         font-size: 2.4rem;
         width: 15rem;
         box-sizing: border-box;
@@ -217,7 +228,7 @@ body {
     .actions-container input[type="button"] {
         padding: 1.6rem;
         border: none;
-        background-color: aqua;
+        background-color: var(--main-blue);
         font-size: 2.4rem;
         width: 15rem;
         box-sizing: border-box;
@@ -234,7 +245,7 @@ body {
 /* local */
 
     .local {
-        background-color: aqua;
+        background-color: var(--main-blue);
         
         border-radius: 2rem;
         
