--- a/style.css
+++ b/style.css
@@ -265,6 +265,7 @@ body {
 
     .local {
         background-color: var(--main-blue);
+        color: white;
         
         border-radius: 2rem;
         
@@ -304,7 +305,7 @@ body {
         width: 2px;
         border: none;
         height: 100%;
-        background-color: black;
+        background-color: white;
         margin: 0;
     }
 
@@ -329,7 +330,7 @@ body {
     }
 
     .local__location span {
-        font-size: 4rem;
+        font-size: 5rem;
     }
 
     .local__temp-range {
@@ -349,7 +350,6 @@ body {
 
         display: flex;
         flex-flow: column;
-        /* justify-content: center; */
         align-items: center;
     }
 
@@ -373,7 +373,7 @@ body {
     .local__temp-range hr {
         border: none;
         height: 2px;
-        background-color: black;
+        background-color: white;
 
         width: 100%;
     }
