--- a/style.css
+++ b/style.css
@@ -5,6 +5,8 @@
     --main-purple: rgb(159, 57, 199);
     --main-blue: rgb(76, 168, 180);
 
+    --box-shadow-default: 0 0 2rem black;
+
     /* Variável para mudança de temperatura do termômetro */
         --termometer: #ddd;
 }
@@ -44,11 +46,13 @@ body {
         display: flex;
         flex-flow: column;
         justify-content: space-around;
+        align-items: center;
         gap: 5rem;
     }
 
     .temp-container__item {
         background-color: var(--main-blue);
+        box-shadow: var(--box-shadow-default);
         
         border-radius: 2rem;
 
@@ -58,6 +62,8 @@ body {
         display: flex;
         flex-flow: column;
         align-items: center;
+
+        transition: padding .5s ease, box-shadow .5s ease;
     }
 
     .temp-container__item h1 {
@@ -67,6 +73,15 @@ body {
         margin-bottom: 0;
     }
 
+    .temp-container__item hr {
+        width: 80%;
+        height: 2px;
+
+        background-color: black;
+
+        border: none;
+    }
+
     .item__text {
         justify-self: center;
         display: flex;
@@ -74,6 +89,12 @@ body {
     .item__text span {
         align-self: center;
         font-size: 9rem;
+    }
+
+    .temp-container__item:hover {
+        padding: 1rem;
+        
+        box-shadow: 0 0 2rem var(--main-blue);
     }
 
 /*  */
@@ -86,6 +107,8 @@ body {
 
     .termometer {
         background-color: var(--main-blue);
+        
+        box-shadow: var(--box-shadow-default);
 
         border-radius: 2rem;
         
@@ -96,6 +119,14 @@ body {
         flex-flow: column;
         align-items: center;
         justify-content: center;
+
+        transition: padding .5s ease, box-shadow .5s ease;
+    }
+
+    .termometer:hover {
+        padding: 0 1rem;
+        
+        box-shadow: 0 0 2rem var(--main-blue);
     }
 
     .progress-container {
@@ -213,46 +244,37 @@ body {
         gap: 3rem;
     }
 
+    .actions-container input,
     .actions-container select {
-        padding: 1.6rem;
+        background-color: var(--main-blue);
+        
+        box-shadow: var(--box-shadow-default);
 
         border: none;
-        background-color: var(--main-blue);
-        font-size: 2.4rem;
         border-radius: 2rem;
+
+        font-family: Nunito;
+        font-size: 2.4rem;
+        font-weight: 600;
+
+        width: 17rem;
+        
+        box-sizing: border-box;
+        padding: 1.6rem;   
+
+        transition: box-shadow .3s ease;
     }
 
-    .actions-container input[type="number"] {
-        padding: 1.6rem;
+    .actions-container input:hover,
+    .actions-container select:hover {
         border: none;
-        background-color: var(--main-blue);
-        font-size: 2.4rem;
-        width: 15rem;
-        box-sizing: border-box;
-        
-        border-radius: 2rem;
+        outline: none;
+
+        box-shadow: 0 0 2rem var(--main-blue);
     }
 
-    .actions-container input[type="submit"] {
-        padding: 1.6rem;
-        border: none;
-        background-color: var(--main-blue);
-        font-size: 2.4rem;
-        width: 15rem;
-        box-sizing: border-box;
-        
-        border-radius: 2rem;
-    }
-
-    .actions-container input[type="button"] {
-        padding: 1.6rem;
-        border: none;
-        background-color: var(--main-blue);
-        font-size: 2.4rem;
-        width: 15rem;
-        box-sizing: border-box;
-        
-        border-radius: 2rem;
+    #in-back {
+        display: none;
     }
 
 /*  */
@@ -267,6 +289,8 @@ body {
         background-color: var(--main-blue);
         color: white;
         
+        box-shadow: var(--box-shadow-default);
+        
         border-radius: 2rem;
         
         height: 100%;
@@ -278,6 +302,13 @@ body {
         display: none;
         flex-flow: column;
         gap: 2rem;
+
+        transition: box-shadow .5s ease, width .5s ease;
+    }
+
+    .local:hover {
+        box-shadow: 0 0 2rem var(--main-blue);
+        width: 27%;
     }
     
     .local__main {
@@ -294,7 +325,7 @@ body {
     }
 
     .local__main__img {
-        width: 45%;
+        width: 17rem;
     }
     .local__main__img img {
         height: 100%;
@@ -377,3 +408,4 @@ body {
 
         width: 100%;
     }
+/*  */
