--- a/css/local.css
+++ b/css/local.css
@@ -25,7 +25,7 @@
 }
 
 .local__main {
-    background-color: blue;
+    background-color: rgb(27, 27, 27);
     border-radius: 2rem;
     height: 40%;
 
@@ -64,7 +64,7 @@
 }
 
 .local__location {
-    background-color: blue;
+    background-color: rgb(27, 27, 27);
     border-radius: 2rem;
     height: 15%;
 
@@ -84,7 +84,7 @@
 }
 
 .local-min, .local-max {
-    background-color: blue;
+    background-color: rgb(27, 27, 27);
     border-radius: 2rem;
     height: 100%;
     width: 100%;
