--- a/css/media.css
+++ b/css/media.css
@@ -17,17 +17,56 @@
 }
 
 @media screen and (orientation: portrait) {
+    html {
+        height: 200vh;
+    }
+
     body {
-        background-color: green;
+        background-color: var(--main-purple);
+        align-items: center;
+
+        margin: 20px;
     }
 
     .actions-container {
-        min-width: none;
+        min-width: initial;
+
+        margin-bottom: 20px;
+
+        position: sticky;
+        top: 20px;
+
+        order: 1;
+        z-index: 10;
+    }
+
+    .actions-container form {
+        width: 100px;
+    }
+
+    .actions-container input,
+    .actions-container select {
+        width: 20px;
     }
 
     .main-container {
-        flex-flow: column;
+        height: 100%;
+        width: 80%;
+
+        flex-flow: column nowrap;
         align-items: center;
-        width: 100vw;
+        justify-content: flex-start;
+        gap: 200px;
+
+        order: 2;
+    }
+
+    .temp-container, .termometer, .local {
+        width: 100%;
+        height: 80vh;
+    }
+
+    .temp-container__item {
+        width: 100%;
     }
 }
