--- a/css/media.css
+++ b/css/media.css
@@ -18,7 +18,7 @@
 
 @media screen and (orientation: portrait) {
     html {
-        height: 200vh;
+        height: 185vh;
     }
 
     body {
@@ -31,22 +31,43 @@
     .actions-container {
         min-width: initial;
 
-        margin-bottom: 20px;
+        margin-bottom: 40px;
 
         position: sticky;
-        top: 20px;
+        top: 30px;
 
         order: 1;
         z-index: 10;
     }
 
     .actions-container form {
-        width: 100px;
+        width: 100%;
+        gap: 5px;
+        background-color: aliceblue;
+        border-radius: 1rem;
+        padding: 1rem;
     }
-
+    
     .actions-container input,
     .actions-container select {
-        width: 20px;
+        padding: 0;
+        width: 100%;
+        font-size: 1.5rem;
+        border-radius: .5rem;
+        box-shadow: none;
+    }
+
+    .actions-container select {
+        font-size: 1.2rem;
+    }
+
+    .actions-container input[type="number"] {
+        padding-left: .5rem;
+    }
+
+    .actions-container input:hover,
+    .actions-container select:hover {
+        box-shadow: none;
     }
 
     .main-container {
@@ -56,17 +77,26 @@
         flex-flow: column nowrap;
         align-items: center;
         justify-content: flex-start;
-        gap: 200px;
+        gap: 160px;
 
         order: 2;
     }
 
     .temp-container, .termometer, .local {
         width: 100%;
-        height: 80vh;
+        height: 70vh;
     }
 
     .temp-container__item {
+        width: 100%;
+        height: 25rem;
+    }
+
+    .item__text span {
+        font-size: 6rem;
+    }
+
+    .local:hover {
         width: 100%;
     }
 }
