--- a/css/local.css
+++ b/css/local.css
@@ -39,6 +39,10 @@
 
 .local__main__img {
     width: 17rem;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 .local__main__img img {
     height: 100%;
