--- a/css/media/media.css
+++ b/css/media/media.css
@@ -1,4 +1,4 @@
-@media screen and (orientation: landscape) {
+/* @media screen and (orientation: landscape) {
     body {
         min-width: 1500px;
         min-height: calc(670px + 25vh);
@@ -14,4 +14,4 @@
     body {
         background-color: black;
     }
-}
+} */
